[package]
name = "steam_api"
version = "0.1.0"
authors = ["Nicholas McDaniel <nickmcdaniel00@gmail.com>"]
edition = "2018"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Steam WebApi requests
reqwest = { version = "0.10.4", features = [ "blocking", "json" ] }

# Constants
lazy_static = "1.4.0"

# Decoding WebApi results
serde_json = "1.0.53"
serde = { version = "1.0.53", features = [ "derive" ] }

# SessionKey generation
rand = "0.7.3"

# Encryption and checksums
openssl = "0.10.29"
crc = "1.8.1"

# HmacIV encryption
hmac-sha1 = "0.1.3"

# Protobuf encoding and decoding
prost = { git = "https://github.com/danburkert/prost" }

# For machine id encoding
hex = "0.4.2"

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost" }